# LIANLIANKAN1314

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CUSTOMER_ONBOARDING.md  Dockerfile  ENGINE_DECISION.md  MISSION.md  Makefile  README.md  RISK_CONTROL.md  SETUP.md  STATUS_HANDOFF.md  TRAINING_AUTO_STOP.md  V11_DEPLOY.md  docker-compose.yml  findings.md  progress.md  pyproject.toml  task_plan.md
client/: __init__.py  activation.py  api_client.py  consent_page.py  content_watcher.py  encrypt.py  main.py  review_popup.py  risk_control.py  sender.py  sentry_init.py  tray.py  updater.py  v11_main.py  version_probe.py  watcher.py  wechat_alert_detector.py
config/: config.example.yaml  loader.py  tenants.example.yaml
db/: schema.sql
deploy/: certbot.sh  docker-compose.prod.yml  ecs_v11_setup.sh  init.sh  nginx.conf  sentry-compose.yml
docs/: CONNECT_DAGE_ACTION_PLAN.md  CUSTOMER_INSTALL_PLAYBOOK.md  RUNBOOK_wave13.md  SALES_PLAYBOOK.md  STATUS_2026_04_19.md  cost_economics.md  deploy_guide.md  install.bat  install_client.ps1  lora_training_guide.md  onboarding_guide.md  sentry_setup.md
evolution/: __init__.py  training_queue.py
installer/: BUILD_GUIDE.md  CUSTOMER_SETUP_GUIDE.md  build.sh  default_config  nuitka_build.py  setup.iss  wechat_agent.spec
legal/: data_ownership.md  disclaimer.md  privacy_policy.md  user_agreement.md  user_agreement_v3.md
monitoring/: alerts.yml  docker-compose.yml  grafana_dashboard.json  prometheus.yml
pipeline/: __init__.py  dpo_pair.py  eval.py  extract_chat.py  judge.py  train_lora.py
scripts/: healthcheck_wave13.sh  ingest_knowledge.py  init_db.py  install_windows.ps1  seed_tenant.py
server/: __init__.py  account_failover.py  action_recommender.py  activation.py  admin.py  anti_detect.py  asr_client.py  audit.py  auth.py  auto_send.py  billing.py  classifier.py  compliance_check.py  content_ingest.py  cross_sell.py  customer_pipeline.py  customer_profile.py  dashboard.py  data_deletion.py  data_export.py  db.py  early_bird.py  embedder.py  encryption.py  follow_up.py  generator.py  gewe_engine.py  (+31 more)
(+126 files in other folders)
